--- a/style.css
+++ b/style.css
@@ -124,13 +124,21 @@ button{
 }
 @media (min-width:300px) and (max-width:399px){
     input[type="text"]{
-        width: 100%;
+        width: 120px;;
     }
     button{
-        font-size: 18px;
-       width: 50%;
+        font-size: 16px;
     }
     .social-media{
         gap: 30px;
+    }
+    .body-text{
+        font-size: 16px;
+    }
+    .content-text{
+        font-size: 16px;
+    }
+    .title{
+        font-size: 18px;
     }
 }
