--- a/Blog-Site/style-in.css
+++ b/Blog-Site/style-in.css
@@ -186,7 +186,7 @@ height: 2rem;
     border: none;
 }
 
-  @media only screen and (max-width: 1100px) {
+  /* @media only screen and (max-width: 1100px) {
     body{
         background-color: red;
     }
@@ -200,4 +200,4 @@ height: 2rem;
     .header .title{
         font-size: 1.5rem;
     }
-  }
+  } */
